--- a/Практическая работа 1/MainWindow.xaml
+++ b/Практическая работа 1/MainWindow.xaml
@@ -1,12 +1,25 @@
-﻿<Window x:Class="Практическая_работа_1.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Практическая_работа_1"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window x:Class="Практическая_работа_1.MainWindow" 
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+        Title="Практическая работа 1" Height="493" Width="721"
+        Closing="Window_Closing">
     <Grid>
-        
+        <Image Name="mathImage" Source="C:\Users\227123\Downloads\Снимок.png" HorizontalAlignment="Left" VerticalAlignment="Top" Width="322" Height="133" Margin="38,140,0,0"/>
+
+        <Label Content="x:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="408,20,0,0" Height="31" Width="51"/>
+        <TextBox Name="xInput" HorizontalAlignment="Left" VerticalAlignment="Top" Width="279" Margin="408,44,0,0" ToolTip="Введите значение x" Height="22"/>
+
+        <Label Content="y:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="408,80,0,0" Height="31" Width="64"/>
+        <TextBox Name="yInput" HorizontalAlignment="Left" VerticalAlignment="Top" Width="279" Margin="408,104,0,0" ToolTip="Введите значение y" Height="22"/>
+
+        <RadioButton Name="shRadioButton" Content="sh(x)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="408,140,0,0" ToolTip="Гиперболический синус" Height="18" Width="122"/>
+        <RadioButton Name="x2RadioButton" Content="x²" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="408,164,0,0" ToolTip="Квадрат числа" Height="18" Width="80"/>
+        <RadioButton Name="expRadioButton" Content="e^x" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="408,188,0,0" ToolTip="Экспоненциальная функция" Height="18" Width="109"/>
+
+        <Button Name="calculateButton" Content="Вычислить" HorizontalAlignment="Left" VerticalAlignment="Top" Width="279" Margin="408,225,0,0" ToolTip="Вычислить результат" Height="24" Click="calculateButton_Click"/>
+        <Button Name="clearButton" Content="Очистить" HorizontalAlignment="Left" VerticalAlignment="Top" Width="279" Margin="408,261,0,0" ToolTip="Очистить поля" Height="24" Click="clearButton_Click"/>
+
+        <Label Content="Результат:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="408,297,0,0" Height="31" Width="181"/>
+        <TextBox Name="resultTextBox" HorizontalAlignment="Left" VerticalAlignment="Top" Width="279" Margin="408,321,0,0" IsReadOnly="True" Height="21"/>
     </Grid>
 </Window>
