--- a/Практическая работа 1/MainWindow.xaml
+++ b/Практическая работа 1/MainWindow.xaml
@@ -4,7 +4,7 @@
         Title="Практическая работа 1" Height="493" Width="721"
         Closing="Window_Closing">
     <Grid>
-        <Image Name="mathImage" Source="C:\Users\227123\Downloads\Снимок.png" HorizontalAlignment="Left" VerticalAlignment="Top" Width="322" Height="133" Margin="38,140,0,0"/>
+        <Image Name="mathImage" Source="Ресурсы\Снимок.png" HorizontalAlignment="Left" VerticalAlignment="Top" Width="322" Height="133" Margin="38,140,0,0"/>
 
         <Label Content="x:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="408,20,0,0" Height="31" Width="51"/>
         <TextBox Name="xInput" HorizontalAlignment="Left" VerticalAlignment="Top" Width="279" Margin="408,44,0,0" ToolTip="Введите значение x" Height="22"/>
